aligns buildings with flexbox correctly

--- a/free-code-camp/responsive-web-design/city-skyline/styles.css
+++ b/free-code-camp/responsive-web-design/city-skyline/styles.css
@@ -55,8 +55,8 @@ body {
     height: 100%;
     width: 100%;
     display: flex;
-    align-items: bottom;
-    justify-content: bottom;
+    align-items: flex-end;
+    justify-content: space-evenly;
 }
 
 .bb1 {
